# mcp-prompt-server

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  opencode.json  prompt.mcp.json  pyproject.toml  remote.mcp.json
.claude/: settings.local.json
.claude/commands/: create-github-issue.md  create-prompt-issue-request.md  create-prompt.md  git-workflow-assistant.md
.codex/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  prompt_request.yml
.github/workflows/: release-please.yml
commands/: bug-investigation.md  code-review.md  create-jira.md  start-demo.md
docs/: architecture.md  contributing.md  future.md  mcp-python-sdk.md  prompt-template.md
mcp_prompt_server/: __init__.py  __main__.py  prompts.py  server.py
prompts/: code-review.md  create-jira.md  create-prompt-issue-request.md  create-prompt.md  csv-search.md  emoji-story-dark.md  git-assistant.md  git-workflow-assistant.md  jira-description.md  prompt-create.md  prompt-instructor.md  redneck-encrypt-string.md  test.md
resources/: prompt-template.md
src/: __init__.py  prompts.py  resources.py  server.py  utils.py
